# hvppypyside6

./: README.md  setup.cfg
src/hvppypyside6/: main.py
src/hvppypyside6/examples/: systemtrayicon.py
