[metadata]
name = hvppypyside6
version = 0.0.1
description = PySide6 Examples
author = hvppycoding
author_email = hvppycoding@gmail.com

[options]
packages = find:
package_dir =
    =src
install_requires = 
    PySide6

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    hvppypyside6 = hvppypyside6.main:main